--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,10 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+
+.width-300 {
+    max-width: 300px;
+    height: auto;
+}
+
